<resources>
    <string name="app_name">chapter02</string>
    <string name="hint_QQName">输入QQ号码</string>
    <string name="hint_QQPwd">输入QQ密码</string>
    <string name="btn_login">登录</string>
    <string name="chk_RememberPwd">记住密码</string>
    <string name="tv_ForgetPwd">忘记密码</string>
    <string name="tv_RegistQQ">还没有账号？<u>立即注册>></u></string>
    <string name="qq_logo">QQ的Logo</string>
    <string name="title_ForgetPwd"><u>忘记密码</u></string>
    <string name="hint_PhoneNum">输入手机号码</string>
    <string name="hint_NewPwd">输入新密码</string>
    <string name="btn_GetValidNum">获取验证码</string>
    <string name="tv_ValidNum">验证码：</string>
    <string name="btn_ResetPwd">重置密码</string>
    <string name="hint_ValidNum">请输入验证码</string>
    <string name="register_title">QQ注册</string>
    <string name="register_count">QQ号码：</string>
    <string name="register_pwd">QQ密码：</string>
    <string name="register_email">电子邮箱：</string>
    <string name="hint_register_email">输入Email</string>
    <string name="register_gender">性别：</string>
    <string name="register_man">男</string>
    <string name="register_female">女</string>
    <string name="register_notice">提示:</string>
    <string name="register_notice1">1.带*号为必填项</string>
    <string name="register_notice2">2.填写邮箱方便您取回密码以及了解更多QQ信息</string>
    <string name="btn_register">注册</string>
    <string name="title_message">消息</string>
    <string name="tv_addbtn">添加</string>
    <string name="title_contact">联系人</string>
    <string name="login_icon">登录头像</string>
    <string name="menuItem_about">关于</string>
    <string name="menuItem_exit">退出</string>
    <string name="dialog_about_title">关于</string>
    <string name="dialog_about_message">QQ Demo</string>
    <string name="dialog_btn_yes">是</string>
    <string name="dialog_btn_no">否</string>
    <string name="dialog_btn_ok">确定</string>
    <string name="dialog_exit_title">确认</string>
    <string name="dialog_exit_message">是否要退出应用？</string>
    <string name="menuItem_goTop">置顶</string>
    <string name="menuItem_delete">删除</string>
    <string name="menuItem_newContact">新增联系人</string>
    <string name="menuItem_delContact">删除联系人</string>
    <string name="dlg_tvTitle">删除联系人</string>
    <string name="dlg_btnOK">加好友</string>
    <string name="dlg_btnCancel">取消</string>
    <string name="dlg_tvChooseContact">请选择要加为好友的联系人:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_add_title">新增联系人</string>
</resources>