<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forget_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.edu.gzy.qqdemo.ForgetPwdActivity">

    <TextView
        android:id="@+id/forget_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bar"
        android:gravity="center_horizontal|center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/title_ForgetPwd"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="30dp"
        android:autofillHints=""
        android:drawableStart="@drawable/phone"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/hint_PhoneNum"
        android:inputType="phone"
        android:minHeight="48dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColorHint="#78909C"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_title_tv" />

    <EditText
        android:id="@+id/etPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:autofillHints=""
        android:drawableStart="@drawable/login_icon_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/hint_NewPwd"
        android:inputType="phone"
        android:minHeight="48dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColorHint="#78909C"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhone" />

    <TextView
        android:id="@+id/tv_ValidNum"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:gravity="center_vertical"
        android:text="@string/tv_ValidNum"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPwd"
        app:layout_constraintEnd_toStartOf="@id/validNum_edit"
        app:lineHeight="48dp" />

    <EditText
        android:id="@+id/validNum_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        android:hint="@string/hint_ValidNum"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingRight="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tv_ValidNum"
        app:layout_constraintTop_toTopOf="@+id/tv_ValidNum"
        app:layout_constraintEnd_toStartOf="@id/getValidNum_btn"/>

    <Button
        android:id="@+id/getValidNum_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_GetValidNum"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/validNum_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/validNum_edit"
        app:layout_constraintTop_toTopOf="@+id/validNum_edit"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/restetPwd_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/btn_ResetPwd"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/getValidNum_btn"
        app:layout_constraintStart_toStartOf="@+id/tv_ValidNum"
        app:layout_constraintTop_toBottomOf="@+id/validNum_edit"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>