<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:minHeight="48dp"
    tools:context="cn.edu.gzy.qqdemo.QQLoginActivity">

    <ImageView
        android:id="@+id/imageQQ"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/qq_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/skin_about_brand" />

    <LinearLayout
        android:id="@+id/name_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/input_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageQQ"
        app:layout_constraintVertical_bias="0.17">

        <EditText
            android:id="@+id/etQQName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:autofillHints="username"
            android:drawableLeft="@drawable/login_icon_account"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/hint_QQName"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/base_horization_line" />

        <EditText
            android:id="@+id/etQQPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/login_icon_password"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/hint_QQPwd"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingTop="5dp"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/BtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/btn_bg_selector"
        android:text="@string/btn_login"
        android:textColor="@color/btn_color_selector"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_linearlayout" />

    <CheckBox
        android:id="@+id/chkRememberPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:button="@null"
        android:drawableLeft="@drawable/chk_button"
        android:text="@string/chk_RememberPwd"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/forgetPwd_tv"
        style="@style/MyTv_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:autoLink="all"
        android:clickable="true"
        android:cursorVisible="true"
        android:minHeight="48dp"
        android:text="@string/tv_ForgetPwd"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/chkRememberPwd"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tvRegisterQQ"
        style="@style/MyTv_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:autoLink="all"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="@string/tv_RegistQQ"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>